Bug 84408 - TOOLBAR: Insert Field toolbar group button drop down doesn't contain icons
Summary: TOOLBAR: Insert Field toolbar group button drop down doesn't contain icons
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard: target:4.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-28 01:16 UTC by Yousuf Philips (jay) (retired)
Modified: 2014-10-28 00:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
screenshot (23.28 KB, image/png)
2014-09-28 07:57 UTC, tommy27
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-09-28 01:16:49 UTC
If you open Insert > Fields, all the items have icons in them, but if you have the insert field group button (.uno:InsertFieldCtrl) in the toolbar, its drop down items have no icons.

As the button is a default button in the standard toolbar in master, it would be good to fix this before the next release.
Comment 1 tommy27 2014-09-28 07:57:14 UTC
Created attachment 106988 [details]
screenshot

issue confirmed under Win7x64 with 4.4.0.0.alpha0+
Build ID: faf99f6f405e076d5c9ab95c876ae1ffb896f8d1
TinderBox: Win-x86@39, Branch:master, Time: 2014-09-26_09:41:28

interestingly the "Fields" command lacks it's own icon in the menu but subelements have icons.

on the other hand the "Fields" command in the toolbar has it's icon but subelements are iconless.

see attached screenshot.
Comment 2 Juergen Funk 2014-10-10 11:04:38 UTC
I try to fix
Comment 3 Juergen Funk 2014-10-22 14:03:29 UTC
Fixed:

Get the icons over "SfxPopupMenuManager"
Improve the Select-function "SwTbxFieldCtrl::PopupHdl"


gerrit: https://gerrit.libreoffice.org/#/c/12068/