Fix fdo#84408 TOOLBAR: Insert Field toolbar ... doesn't contain icons

Get the icon over "SfxPopupMenuManager"
Remove the Select function "SwTbxFieldCtrl::PopupHdl"

Change-Id: I3c8db72a84f2a68f1f68a0be1b21e2454707d84a